--- a/src/main/resources/META-INF/resources/feedback.html
+++ b/src/main/resources/META-INF/resources/feedback.html
@@ -11,23 +11,15 @@
     <div class="flex flex-col md:flex-row justify-between gap-4">
         <!-- Feedback Input Panel -->
         <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col w-full md:w-1/2">
-            <div class="mb-4">
-                <h2 class="block text-gray-700 text-xl font-bold mb-2">Feedback Analyzer for a Coding Workshop</h2>
-            </div>
+            <h2 class="block text-gray-700 text-xl font-bold mb-2">Feedback Analyzer for a Coding Workshop</h2>
             <form id="feedbackForm" action="#" method="POST">
                 <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="age">
-                        Age
-                    </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                           id="age" type="number" placeholder="Enter your age" value="25">
+                    <label for="age" class="block text-gray-700 text-sm font-bold mb-2">Age</label>
+                    <input type="number" id="age" placeholder="Enter your age" value="25" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="gender">
-                        Gender
-                    </label>
-                    <select class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                            id="gender">
+                    <label for="gender" class="block text-gray-700 text-sm font-bold mb-2">Gender</label>
+                    <select id="gender" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                         <option>Please select</option>
                         <option>Male</option>
                         <option selected>Female</option>
@@ -35,25 +27,15 @@
                     </select>
                 </div>
                 <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="country">
-                        Country
-                    </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                           id="country" type="text" placeholder="Enter your country" value="Belgium">
+                    <label for="country" class="block text-gray-700 text-sm font-bold mb-2">Country</label>
+                    <input type="text" id="country" placeholder="Enter your country" value="Belgium" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="mb-6">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="feedback">
-                        Free Feedback
-                    </label>
-                    <textarea
-                            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-40"
-                            id="feedback" placeholder="Enter your feedback">Excellent workshop content, really very interesting to take home and continue to work on. The tempo of the workshop was a little high, I could hardly follow by times, but ok. And the food was really crap.</textarea>
+                    <label for="feedback" class="block text-gray-700 text-sm font-bold mb-2">Free Feedback</label>
+                    <textarea id="feedback" placeholder="Enter your feedback" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-40">Excellent workshop content, really very interesting to take home and continue to work on. The tempo of the workshop was a little high, I could hardly follow by times, but ok. And the food was really crap.</textarea>
                 </div>
                 <div class="flex items-center justify-between">
-                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                            type="submit">
-                        Submit
-                    </button>
+                    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Submit</button>
                 </div>
             </form>
         </div>
@@ -65,7 +47,7 @@
                 <p class="mr-2">Processing feedback</p>
                 <div class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-12 w-12"></div>
             </div>
-            <p id="analysisResult">Analysis data will be shown here.</p>
+            <div id="analysisResult">Analysis data will be shown here.</div>
         </div>
     </div>
 </div>
@@ -74,18 +56,12 @@
         document.getElementById("feedbackForm").addEventListener("submit", function(e) {
             e.preventDefault(); // Prevent the default form submission
 
-            // Display loading indicator
             document.getElementById("loadingIndicator").classList.remove("hidden");
 
-            // Convert age to a number if it's not empty, otherwise default to 0
             var age = document.getElementById("age").value.trim() === "" ? 0 : parseInt(document.getElementById("age").value);
             var gender = document.getElementById("gender").value;
             var country = document.getElementById("country").value;
-            var feedback = document.getElementById("feedback").value;
-
-            // gender and country are already strings, no need for additional conversion
-
-            feedback = feedback.trim(); // No need for default value as textarea always has content
+            var feedback = document.getElementById("feedback").value.trim();
 
             var feedbackData = {
                 age: age,
@@ -96,33 +72,38 @@
 
             console.log("Sending ", feedbackData);
 
-            // Replace 'your-endpoint-url' with your actual endpoint URL
-            fetch('http://localhost:8080/feedbackprocessor', {
+            fetch('http://localhost:8080/api/feedbackprocessor', {
                 method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
+                headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify(feedbackData),
             })
-            .then(response => {
-                if (response.ok) {
-                    return response.text();
-                } else {
-                     return response.text().then(errorData => {
-                        let errorMessage = errorData.message || 'Unknown error occurred';
-                        throw new Error(errorMessage);
-                     });
-                }
-            })
+            .then(response => response.json()) // Expecting JSON response
             .then(data => {
                 console.log('Success:', data);
+                var resultContainer = document.getElementById("analysisResult");
+                resultContainer.innerHTML = ''; // Clear previous results
+
+                data.forEach(fb => {
+                    var fbDiv = document.createElement('div');
+                    fbDiv.className = 'p-4 mb-2 bg-gray-50 border rounded';
+
+                    var tags = fb.tags.map(tag => `<span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">${tag}</span>`).join('');
+                    fbDiv.innerHTML = `
+                        <p><strong>Category:</strong> ${fb.category}</p>
+                        <p><strong>Urgency:</strong> ${fb.urgency}%</p>
+                        <p><strong>Severity:</strong> ${fb.severity}%</p>
+                        <p><strong>Impact:</strong> ${fb.impact}%</p>
+                        <p><strong>Feedback:</strong> ${fb.feedback}</p>
+                        <div>${tags}</div>
+                    `;
+                    resultContainer.appendChild(fbDiv);
+                });
+
                 document.getElementById("loadingIndicator").classList.add("hidden");
-                document.getElementById("analysisResult").innerText = JSON.stringify(data);
-                // Optionally clear the form fields here
-                document.getElementById("feedbackForm").reset();
+                document.getElementById("feedbackForm").reset(); // Optionally clear the form fields
             })
             .catch((error) => {
-                console.error('Error:', error.message);
+                console.error('Error:', error);
                 document.getElementById("loadingIndicator").classList.add("hidden");
                 document.getElementById("analysisResult").innerText = 'Error occurred while processing feedback: ' + error.message;
             });
