upgrade to latest quarkus langchain4j version and empty defaults in html

--- a/src/main/resources/META-INF/resources/feedback.html
+++ b/src/main/resources/META-INF/resources/feedback.html
@@ -15,24 +15,24 @@
             <form id="feedbackForm" action="#" method="POST">
                 <div class="mb-4">
                     <label for="age" class="block text-gray-700 text-sm font-bold mb-2">Age</label>
-                    <input type="number" id="age" placeholder="Enter your age" value="25" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <input type="number" id="age" placeholder="Enter your age" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="mb-4">
                     <label for="gender" class="block text-gray-700 text-sm font-bold mb-2">Gender</label>
                     <select id="gender" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                         <option>Please select</option>
+                        <option>Female</option>
                         <option>Male</option>
-                        <option selected>Female</option>
                         <option>Prefer not to say</option>
                     </select>
                 </div>
                 <div class="mb-4">
                     <label for="country" class="block text-gray-700 text-sm font-bold mb-2">Country</label>
-                    <input type="text" id="country" placeholder="Enter your country" value="Belgium" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <input type="text" id="country" placeholder="Enter your country" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="mb-6">
                     <label for="feedback" class="block text-gray-700 text-sm font-bold mb-2">Free Feedback</label>
-                    <textarea id="feedback" placeholder="Enter your feedback" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-40">Excellent workshop content, really very interesting to take home and continue to work on. The tempo of the workshop was a little high, I could hardly follow by times, but ok. And the food was really crap.</textarea>
+                    <textarea id="feedback" placeholder="Enter your feedback" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-40"></textarea>
                 </div>
                 <div class="flex items-center justify-between">
                     <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Submit</button>
